--- a/BulkyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyBookWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -77,7 +77,7 @@
 			{
 				<button class="btn btn-primary" onClick="return ValidateInput()" btn-primary" type="submit" style="width:150px">Create</button>
 			}
-			<a asp-controller="CoverType" asp-action="Index" class="btn btn-secondary "style="width:150px">Back To List!</a>
+			<a asp-controller="Product" asp-action="Index" class="btn btn-secondary "style="width:150px">Back To List!</a>
 		</div>
 
 	</div>
